# smr-pfc

./: .gitignore  CLAUDE.md  DEV-LOG.md  Dockerfile  README.md  chainlit.md  pyproject.toml
.claude/: settings.json
design/: ARCHITECTURE-DECISIONS.md  BUILD-INSTRUCTIONS.md  BUSINESS-ARCH-AND-SCHEMA-REVIEW.md  PFC-Database-Schema.mermaid  PFC-Entities.md  README.md  REQUIREMENTS.md  STANDARDS.md  SYSTEM-PROMPT.md
docs/: AGENTS.md  ARCHITECTURE.md  COMMANDS.md  README.md  WORKFLOWS.md
stanmore-pfc/.agents/: config.yaml
stanmore-pfc/capabilities/: capability-model.yaml
stanmore-pfc/requirements/: _index.yaml
stanmore-pfc/vocabulary/: enterprise-glossary.yaml
tests/test_agents/: test_architecture_review.py  test_capability_intelligence.py  test_domain_knowledge_spec.py  test_guardrail.py  test_multi_format_export.py  test_nfr_compliance.py  test_orbus_sync.py  test_runner.py  test_spec_code_alignment.py  test_spec_decomposition.py  test_stakeholder_comms.py  test_standards_enforcer.py  test_transcript_classifier.py  test_use_case_assessment.py  test_weekly_summary.py  test_wiki_integrity.py
tests/test_chat/: test_context_bootstrap.py  test_motivation_handler.py
tests/test_extraction/: test_export.py  test_extractor.py  test_review_enhanced.py  test_schemas.py
tests/test_models/: test_business_arch_model.py  test_config.py  test_domains.py  test_elements.py  test_extraction.py  test_governance_model.py  test_manifests.py  test_motivation.py  test_motivation_model.py  test_portfolio_model.py  test_practice.py  test_practice_index.py  test_strategy_model.py  (+2 more)
(+91 files in other folders)
